# Drone-Racing

./: .gitignore  README.md  writeup.md
scripts/rsl_rl/: play_race.py  train_race.py  train_race_circle_slow.py
sim2real/: .gitignore  .gitmodules
sim2real/config/: sampling_topics.txt
sim2real/docker/container-x86-cudev/: Dockerfile  ros2.sh  zshrc
sim2real/docker/container-x86-cudev/.devcontainer/: devcontainer.json  docker-compose.yaml
sim2real/docker/container-x86-dev/: Dockerfile
sim2real/docker/container-x86-dev/.devcontainer/: devcontainer.json  docker-compose.yaml
sim2real/src/: select_team.py
sim2real/src/controller/: .gitignore  package.xml  setup.py
sim2real/src/controller/config/: controller.yaml
sim2real/src/controller/controller/: controller_app.py  controller_callbacks.py  controller_fsm.py  controller_node.py  controller_params.py  controller_qos.py  controller_simple_policy.py  controller_utils.py
sim2real/src/controller/launch/: controller.launch.py
sim2real/src/crazyradio_driver/: .gitignore  package.xml  setup.cfg  setup.py
sim2real/src/crazyradio_driver/config/: crazyradio_driver.yaml
sim2real/src/crazyradio_driver/crazyradio_driver/: crazyradio_driver_app.py  crazyradio_driver_callbacks.py  crazyradio_driver_node.py  crazyradio_driver_params.py
sim2real/src/crazyradio_driver/launch/: crazyradio_driver.launch.py
sim2real/src/crazyradio_driver_cpp/: CMakeLists.txt  package.xml
sim2real/src/crazyradio_driver_cpp/config/: crazyradio_driver.yaml
sim2real/src/crazyradio_driver_cpp/include/crazyradio_driver/: crazyflie_driver.hpp  crazyradio_driver.hpp
sim2real/src/crazyradio_driver_cpp/launch/: crazyradio_driver.launch.py
sim2real/src/crazyradio_driver_cpp/src/: crazyradio_driver_app.cpp
sim2real/src/crazyradio_driver_cpp/src/crazyradio_driver/: crazyflie_driver.cpp  crazyradio_driver.cpp  crazyradio_driver_params.cpp  crazyradio_driver_subscribers.cpp  crazyradio_driver_utils.cpp
sim2real/src/jirl_bringup/: .gitignore  CMakeLists.txt  package.xml
sim2real/src/jirl_bringup/config/: config.yaml
sim2real/src/jirl_bringup/launch/: controller.launch.py  crazyradio_driver.launch.py  vicon.launch.py
sim2real/src/jirl_interfaces/: CMakeLists.txt  package.xml
sim2real/src/jirl_interfaces/msg/: CommandCTBR.msg  Observations.msg  OdometryArray.msg  Setpoint.msg  Trajectory.msg
sim2real/src/jirl_interfaces/srv/: Arm.srv  StartTrajectory.srv  UpdateSetpoint.srv
sim2real/src/rviz2_crazyflie_plugin/: CMakeLists.txt  README.md  package.xml  rviz2_crazyflie_plugin.xml
sim2real/src/rviz2_crazyflie_plugin/include/: crazyflie_panel.hpp
sim2real/src/rviz2_crazyflie_plugin/src/: crazyflie_panel.cpp
sim2real/tools/crazyflie_cpp/: CMakeLists.txt
sim2real/tools/crazyflie_cpp/crazyflie-link-cpp/: CMakeLists.txt
sim2real/tools/crazyflie_cpp/crazyflie-link-cpp/cmake/: crazyflie-link-cppConfig.cmake.in
sim2real/tools/crazyflie_cpp/crazyflie-link-cpp/examples/: benchmark.cpp  broadcast.cpp  console.cpp  control.cpp  scan.cpp
sim2real/tools/crazyflie_cpp/crazyflie-link-cpp/include/crazyflieLinkCpp/: Connection.h  Packet.hpp
sim2real/tools/crazyflie_cpp/examples/: control.cpp
src/isaac_quad_sim2real/tasks/race/config/crazyflie/: quadcopter_env.py  quadcopter_strategies.py
src/isaac_quad_sim2real/tasks/race/config/crazyflie/agents/: rsl_rl_ppo_cfg.py
