<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jirl_bringup</name>
  <version>1.0.0</version>
  <description>JIRL bringup module.</description>
  <maintainer email="lnz.bnc@gmail.com">Lorenzo Bianchi</maintainer>
  <license>GNU GPL v3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>jirl_interfaces</depend>
  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
